--- a/fakepinterest/templates/criarconta.html
+++ b/fakepinterest/templates/criarconta.html
@@ -24,7 +24,7 @@
 
           <h2>Crie sua conta</h2>
 
-          <div class="div-input">     dadw
+          <div class="div-input">
             {{form.email.label(class="label")}}
             {% if form.email.errors %}
 
