--- a/fakepinterest/templates/homepage.html
+++ b/fakepinterest/templates/homepage.html
@@ -7,7 +7,7 @@
     {% block titulo %}
     <title>FakePinterest</title>
     {% endblock %}
-    <link rel="stylesheet", href="{{url_for('static', filename='css/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
   </head>
 {% block body %}
   <body class="overflow-hidden">
